hide scrollbar to avoid layout shifts

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* html {
-  overflow-y: scroll;
-} */
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 html::-webkit-scrollbar {
   display: none;
